Address foreach review feedback and Splunk semantics
Signed-off-by: Songkan Tang <songkant@amazon.com>